chore: update vim and tmux

--- a/vim + tmux/.tmux.conf
+++ b/vim + tmux/.tmux.conf
@@ -7,8 +7,8 @@ set -g history-limit 10000
 setw -g mode-keys vi
 setw -g monitor-activity on
 
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -27,6 +27,9 @@ bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
+# Allow mouse for scrolling
+set -g mouse on
+
 # use alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -44,6 +47,10 @@ set -sg escape-time 0
 unbind r
 bind r source-file ~/.tmux.conf
 
+# Close pane without promt
+unbind x
+bind-key x kill-pane
+
 # unbind default prefix and set it to Ctrl+a
 unbind C-b
 set -g prefix C-a
@@ -60,3 +67,8 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
+
+# disable sound bell
+set -g bell-action none
+# disable visual bell
+set -g visual-bell off
