fix: finally add italics support

--- a/vim+tmux/.tmux.conf
+++ b/vim+tmux/.tmux.conf
@@ -1,6 +1,6 @@
 set -g base-index 1
 
-# set -g default-terminal screen-256color
+set -g default-terminal 'tmux-256color'
 set -g status-keys vi
 set -g history-limit 10000
 
@@ -72,3 +72,6 @@ run -b '~/.tmux/plugins/tpm/tpm'
 set -g bell-action none
 # disable visual bell
 set -g visual-bell off
+
+# Support italics
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
