--- a/vim+tmux/.tmux.conf
+++ b/vim+tmux/.tmux.conf
@@ -1,8 +1,9 @@
 set -g base-index 1
 
-set -g default-terminal 'tmux-256color'
+set -g default-terminal 'xterm-256color-italic'
 set -g status-keys vi
 set -g history-limit 10000
+set-option -ga terminal-overrides ',xterm-256color-italic:Tc'
 
 setw -g mode-keys vi
 setw -g monitor-activity on
@@ -36,12 +37,12 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+# move between windows
+bind-key h previous-window
+bind-key l next-window
 
 # no delay for escape key press
-set -sg escape-time 0
+set -sg escape-time 10
 
 # reload tmux config
 unbind r
@@ -63,8 +64,8 @@ set-option -g allow-rename off
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
@@ -76,5 +77,3 @@ set -g bell-action none
 # disable visual bell
 set -g visual-bell off
 
-# Support italics
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
