feat(tmux): add shortkey for choose-tree

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,8 @@ set-option -ga terminal-overrides ',xterm-256color-italic:Tc'
 setw -g mode-keys vi
 setw -g monitor-activity on
 
+bind-key S choose-tree -Zs
+
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -v -c "#{pane_current_path}"
 
