--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,7 +48,7 @@ set -sg escape-time 10
 
 # reload tmux config
 unbind r
-bind r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf \; display-message "Config reloaded!"
 
 # Close pane without promt
 unbind x
