feat(clipboard): try unnamed instead of unnamedplus

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,9 @@ set -g status-keys vi
 set -g history-limit 10000
 set-option -ga terminal-overrides ',xterm-256color-italic:Tc'
 
+# Integrate with OS X pasteboard.
+set -g default-command "reattach-to-user-namespace -l zsh"
+
 setw -g mode-keys vi
 setw -g monitor-activity on
 
