fix(tmux): cleanup statusbar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,17 +66,20 @@ bind C-a send-prefix
 set-option -g allow-rename off
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
 
 # disable sound bell
 set -g bell-action none
+
 # disable visual bell
 set -g visual-bell off
 
+set -g status-position bottom
+set -g status-right '%a | %h-%d | %H:%M '
