fix: keep theme settings after reload

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,11 @@
 set -g base-index 1
 
-set -g default-terminal 'xterm-256color-italic'
+# Set tmux to display in 256 colors
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
 set -g status-keys vi
 set -g history-limit 10000
-set-option -ga terminal-overrides ',xterm-256color-italic:Tc'
 
 # Integrate with OS X pasteboard.
 set -g default-command "reattach-to-user-namespace -l zsh"
@@ -11,7 +13,8 @@ set -g default-command "reattach-to-user-namespace -l zsh"
 setw -g mode-keys vi
 setw -g monitor-activity on
 
-bind-key S choose-tree -Zs
+unbind a
+bind-key a choose-tree -Zs
 
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -v -c "#{pane_current_path}"
@@ -20,11 +23,6 @@ bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
-
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
 
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
@@ -35,12 +33,6 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 
 # Allow mouse for scrolling
 set -g mouse on
-
-# use alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
 
 # move between windows
 bind-key h previous-window
