--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -26,7 +26,7 @@ scrolling:
 font:
   normal:
     family: BlexMono Nerd Font Mono
-    style: Light
+    style: Text
 
   bold:
     family: BlexMono Nerd Font Mono
@@ -40,7 +40,7 @@ font:
 
   offset:
     x: 0
-    y: 0
+    y: 9
 
   glyph_offset:
     x: 0
