--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -16,7 +16,7 @@ window:
   startup_mode: Windowed
   dimensions:
     columns: 200
-    lines: 55
+    lines: 40
 
 scrolling:
   history: 10000
@@ -36,7 +36,7 @@ font:
     family: BlexMono Nerd Font Mono
     style: Italic
 
-  size: 13
+  size: 14
 
   offset:
     x: 0
@@ -47,6 +47,8 @@ font:
     y: 0
 
   use_thin_strokes: true
+
+  dynamic_title: true
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
@@ -78,7 +80,7 @@ colors:
 
   indexed_colors: []
 
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
   color: '0xffffff'
@@ -98,8 +100,6 @@ selection:
 
   # When set to `true`, selected text will be copied to the primary clipboard.
   save_to_clipboard: false
-
-dynamic_title: true
 
 cursor:
   style: Block
