feat: try fish shell over zsh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,13 +2,13 @@ set -g base-index 1
 
 # Set tmux to display in 256 colors
 set -g default-terminal "tmux-256color"
+# set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g status-keys vi
 set -g history-limit 10000
 
-# Integrate with OS X pasteboard.
-set -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-shell $SHELL
 
 setw -g mode-keys vi
 setw -g monitor-activity on
