--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,7 +58,8 @@ bind C-a send-prefix
 set-option -g allow-rename off
 
 # List of plugins
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'dracula/tmux'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -75,3 +76,10 @@ set -g visual-bell off
 
 set -g status-position bottom
 set -g status-right '%a | %h-%d | %H:%M '
+
+# customize Dracula theme
+set -g @dracula-show-network false
+set -g @dracula-show-location false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-left-icon smiley
+set -g @dracula-day-month true
