fix(vim): update key bindings to not interfere with defaults

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -29,11 +29,13 @@
   "explorer.buffer.showHiddenBuffers": true,
   "explorer.icon.enableNerdfont": true,
   "explorer.keyMappings": {
-    "gj": false,
-    "gk": false,
-    "<cr>": ["expandable?", "expand", "open"],
-    "v": "open:vsplit",
-    "s": "open:split",
-    "<esc>": "quit"
+    "global": {
+      "gj": false,
+      "gk": false,
+      "<cr>": ["expandable?", "expand", "open"],
+      "v": "open:vsplit",
+      "s": "open:split",
+      "<esc>": "quit"
+    }
   }
 }
