--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -8,6 +8,7 @@
     "javascript",
     "javascriptreact",
     "json",
+    "svelte",
     "typescript",
     "typescript.tsx",
     "typescriptreact"
