--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -18,6 +18,7 @@
     "javascriptreact",
     "typescript.tsx"
   ],
+  "css.validate": false,
   "snippets.userSnippetsDirectory": "~/Code/dotfiles/vim/snippets",
   "snippets.extends": {
     "javascriptreact": ["javascript"],
@@ -25,9 +26,7 @@
     "typescript": ["javascript"]
   },
   "explorer.file.showHiddenFiles": true,
-  "explorer.buffer.showHiddenBuffers": true,
   "explorer.icon.enableNerdfont": true,
-  "explorer.icon.enableVimDevicons": true,
   "explorer.keyMappings.global": {
     "gj": false,
     "gk": false,
