--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,7 +14,7 @@ setw -g mode-keys vi
 setw -g monitor-activity on
 
 unbind a
-bind-key a choose-tree -Zs
+bind-key a choose-tree -Zs -O name
 
 bind-key c new-window -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
