--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -8,6 +8,7 @@ debug:
 #   TERM: xterm-256color
 
 window:
+  opacity: 1.0
   padding:
     x: 2
     y: 2
@@ -15,7 +16,7 @@ window:
   decorations: buttonless
   startup_mode: Windowed
   dimensions:
-    columns: 200
+    columns: 150
     lines: 40
 
 scrolling:
@@ -84,8 +85,6 @@ bell:
   animation: EaseOutExpo
   duration: 0
   color: '0xffffff'
-
-background_opacity: 1.0
 
 mouse_bindings:
   - { mouse: Middle, action: PasteSelection }
