--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,15 +69,13 @@ bind C-a send-prefix
 # don't rename windows automatically
 set-option -g allow-rename off
 
-
 # disable sound bell
 set -g bell-action none
 
 # disable visual bell
 set -g visual-bell off
 
-set -g status-position bottom
-set -g status-right '%a | %h-%d | %H:%M '
+# ----------------------------=== Theme ===--------------------------
 
 # NOTE: you can use vars with $<var> and ${<var>} as long as the str is double quoted: ""
 # WARNING: hex colors can't contain capital letters
@@ -97,53 +95,70 @@ thm_blue="#a4b9ef"
 thm_orange="#f9c096"
 thm_black4="#575268"
 
-# ----------------------------=== Theme ===--------------------------
+# ----------------------------=== Status line ===--------------------------
 
-# status
-set -g status-position bottom
-set -g status "on"
+set -g status-left ' #{tmux_mode_indicator} '
+
+set -g status-interval 5
+
+# prompt to display when tmux prefix key is pressed
+set -g @mode_indicator_prefix_prompt ' ⚡️'
+
+# prompt to display when tmux is in copy mode
+set -g @mode_indicator_copy_prompt ' ⚡️'
+
+# prompt to display when tmux has synchronized panes
+set -g @mode_indicator_sync_prompt ' ⚡️'
+
+# prompt to display when tmux is in normal mode
+set -g @mode_indicator_empty_prompt ' ⚡️'
+
+# style values for prefix prompt
+set -g @mode_indicator_prefix_mode_style "bg=${thm_green}, fg=${thm_bg}"
+
+# style values for copy prompt
+set -g @mode_indicator_copy_mode_style "bg=${thm_orange}, fg=${thm_bg}"
+
+# style values for sync prompt
+set -g @mode_indicator_sync_mode_style "bg=${thm_pink}, fg=${thm_bg}"
+
+# style values for empty prompt
+set -g @mode_indicator_empty_mode_style "bg=${thm_magenta}, fg=${thm_bg}"
+
+set -g @cpu_percentage_format "%5.1f%%" # Add left padding
+set -g @cpu_low_fg_color "#[fg=${thm_green}]" # background color when cpu is low
+set -g @cpu_medium_fg_color "#[fg=${thm_yellow}]" # background color when cpu is medium
+set -g @cpu_high_fg_color "#[fk=${thm_red}]" # background color when cpu is high
+
+set -g status-right '
+    #{battery_status_bg} Battery: #{battery_percentage} #{battery_remain} |
+    #{cpu_fg_color} CPU:#{cpu_percentage} '
+
+set -g status on
+set -g status-left-length 90
+set -g status-right-length 90
+
 set -g status-bg "${thm_bg}"
-set -g status-justify "left"
-set -g status-left-length "100"
-set -g status-right-length "100"
+set -g status-fg "${thm_fg}"
 
-# messages
-set -g message-style fg="${thm_cyan}",bg="${thm_gray}",align="centre"
-set -g message-command-style fg="${thm_cyan}",bg="${thm_gray}",align="centre"
+# set window list colors
+set -g window-status-current-style "bg=${thm_red}, fg=${thm_bg}"
+set -g window-status-style "bg=${thm_bg}, fg=${thm_fg}"
 
-# panes
-set -g pane-border-style fg="${thm_gray}"
-set -g pane-active-border-style fg="${thm_blue}"
+# remove indicators and window number
+setw -g window-status-current-format ' #{pane_current_command} '
+setw -g window-status-format ' #{pane_current_command} '
 
-# windows
-setw -g window-status-activity-style fg="${thm_fg}",bg="${thm_bg}",none
-setw -g window-status-separator ""
-setw -g window-status-style fg="${thm_fg}",bg="${thm_bg}",none
-
-# --------=== Statusline
-
-set -g status-left ""
-set -g status-right "#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]#[fg=$thm_bg,bg=$thm_pink,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #W #{?client_prefix,#[fg=$thm_red],#[fg=$thm_green]}#[bg=$thm_gray]#{?client_prefix,#[bg=$thm_red],#[bg=$thm_green]}#[fg=$thm_bg] #[fg=$thm_fg,bg=$thm_gray] #S "
-
-# current_dir
-setw -g window-status-format "#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_gray] #{b:pane_current_path} "
-setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_bg] #{b:pane_current_path} "
-
-# parent_dir/current_dir
-setw -g window-status-format "#[fg=colour232,bg=colour111] #I #[fg=colour222,bg=colour235] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
-setw -g window-status-current-format "#[fg=colour232,bg=colour208] #I #[fg=colour255,bg=colour237] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
-
-# --------=== Modes
-setw -g clock-mode-colour "${thm_blue}"
-setw -g mode-style "fg=${thm_pink} bg=${thm_black4} bold"
+# ----------------------------=== Plugins ===--------------------------
 
 # List of plugins
-# set -g @plugin 'odedlaz/tmux-onedark-theme'
-# set -g @plugin 'dracula/tmux'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
