--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -77,10 +77,7 @@ set -g visual-bell off
 
 # ----------------------------=== Theme ===--------------------------
 
-# NOTE: you can use vars with $<var> and ${<var>} as long as the str is double quoted: ""
-# WARNING: hex colors can't contain capital letters
-
-# --> Catppuccin
+# Catppuccin
 thm_bg="#1e1e28"
 thm_fg="#dadae8"
 thm_cyan="#c2e7f0"
@@ -97,49 +94,35 @@ thm_black4="#575268"
 
 # ----------------------------=== Status line ===--------------------------
 
-set -g status-left ' #{tmux_mode_indicator} '
-
+set -g status on
 set -g status-interval 5
+set -g status-bg "${thm_bg}"
+set -g status-fg "${thm_fg}"
 
-# prompt to display when tmux prefix key is pressed
+set -g status-left-length 90
+set -g status-right-length 90
+
+set -g status-left ' #{tmux_mode_indicator} '
+set -g status-right '
+    #{weather} #{battery_status_bg} | #{battery_percentage} #{battery_remain} |
+    #{cpu_fg_color} CPU:#{cpu_percentage} '
+
+# setup mode indicator styles
 set -g @mode_indicator_prefix_prompt ' ⚡️'
-
-# prompt to display when tmux is in copy mode
 set -g @mode_indicator_copy_prompt ' ⚡️'
-
-# prompt to display when tmux has synchronized panes
 set -g @mode_indicator_sync_prompt ' ⚡️'
-
-# prompt to display when tmux is in normal mode
 set -g @mode_indicator_empty_prompt ' ⚡️'
 
-# style values for prefix prompt
 set -g @mode_indicator_prefix_mode_style "bg=${thm_green}, fg=${thm_bg}"
-
-# style values for copy prompt
 set -g @mode_indicator_copy_mode_style "bg=${thm_orange}, fg=${thm_bg}"
-
-# style values for sync prompt
 set -g @mode_indicator_sync_mode_style "bg=${thm_pink}, fg=${thm_bg}"
-
-# style values for empty prompt
 set -g @mode_indicator_empty_mode_style "bg=${thm_magenta}, fg=${thm_bg}"
 
+# setup cpu section
 set -g @cpu_percentage_format "%5.1f%%" # Add left padding
 set -g @cpu_low_fg_color "#[fg=${thm_green}]" # background color when cpu is low
 set -g @cpu_medium_fg_color "#[fg=${thm_yellow}]" # background color when cpu is medium
 set -g @cpu_high_fg_color "#[fk=${thm_red}]" # background color when cpu is high
-
-set -g status-right '
-    #{battery_status_bg} Battery: #{battery_percentage} #{battery_remain} |
-    #{cpu_fg_color} CPU:#{cpu_percentage} '
-
-set -g status on
-set -g status-left-length 90
-set -g status-right-length 90
-
-set -g status-bg "${thm_bg}"
-set -g status-fg "${thm_fg}"
 
 # set window list colors
 set -g window-status-current-style "bg=${thm_red}, fg=${thm_bg}"
@@ -159,6 +142,7 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'xamut/tmux-weather'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
