--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -31,9 +31,13 @@ font:
 
   bold:
     family: BlexMono Nerd Font Mono
-    style: Bold
+    style: SemiBold
 
   italic:
+    family: BlexMono Nerd Font Mono
+    style: Italic
+
+  bold_italic:
     family: BlexMono Nerd Font Mono
     style: Italic
 
