style(theme): from onedark to catppuccin
Theme is changed in tmux, vim and alacritty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,7 @@
 set -g base-index 1
 
-# Set tmux to display in 256 colors
-set -g default-terminal "tmux-256color"
-# set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g status-keys vi
 set -g history-limit 10000
@@ -71,29 +69,80 @@ bind C-a send-prefix
 # don't rename windows automatically
 set-option -g allow-rename off
 
-# List of plugins
-# set -g @plugin 'odedlaz/tmux-onedark-theme'
-set -g @plugin 'dracula/tmux'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tpm'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
-
 # disable sound bell
 set -g bell-action none
 
 # disable visual bell
 set -g visual-bell off
 
-set -g status-position bottom
-set -g status-right '%a | %h-%d | %H:%M '
+# ----------------------------=== Theme ===--------------------------
 
-# customize Dracula theme
-set -g @dracula-show-network false
-set -g @dracula-show-location false
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-left-icon smiley
-set -g @dracula-day-month true
+# Catppuccin
+thm_bg="#1e1e28"
+thm_fg="#dadae8"
+thm_cyan="#c2e7f0"
+thm_black="#15121c"
+thm_gray="#332e41"
+thm_magenta="#c6aae8"
+thm_pink="#e5b4e2"
+thm_red="#e38c8f"
+thm_green="#b1e3ad"
+thm_yellow="#ebddaa"
+thm_blue="#a4b9ef"
+thm_orange="#f9c096"
+thm_black4="#575268"
+
+# ----------------------------=== Status line ===--------------------------
+
+set -g status on
+set -g status-interval 5
+set -g status-bg "${thm_bg}"
+set -g status-fg "${thm_fg}"
+
+set -g status-left-length 90
+set -g status-right-length 90
+
+set -g status-left ' #{tmux_mode_indicator} '
+set -g status-right '
+    #{weather} #{battery_status_bg} | #{battery_percentage} #{battery_remain} |
+    #{cpu_fg_color} CPU:#{cpu_percentage} '
+
+# setup mode indicator styles
+set -g @mode_indicator_prefix_prompt ' ⚡️'
+set -g @mode_indicator_copy_prompt ' ⚡️'
+set -g @mode_indicator_sync_prompt ' ⚡️'
+set -g @mode_indicator_empty_prompt ' ⚡️'
+
+set -g @mode_indicator_prefix_mode_style "bg=${thm_green}, fg=${thm_bg}"
+set -g @mode_indicator_copy_mode_style "bg=${thm_orange}, fg=${thm_bg}"
+set -g @mode_indicator_sync_mode_style "bg=${thm_pink}, fg=${thm_bg}"
+set -g @mode_indicator_empty_mode_style "bg=${thm_magenta}, fg=${thm_bg}"
+
+# setup cpu section
+set -g @cpu_percentage_format "%5.1f%%" # Add left padding
+set -g @cpu_low_fg_color "#[fg=${thm_green}]" # background color when cpu is low
+set -g @cpu_medium_fg_color "#[fg=${thm_yellow}]" # background color when cpu is medium
+set -g @cpu_high_fg_color "#[fk=${thm_red}]" # background color when cpu is high
+
+# set window list colors
+set -g window-status-current-style "bg=${thm_red}, fg=${thm_bg}"
+set -g window-status-style "bg=${thm_bg}, fg=${thm_fg}"
+
+# remove indicators and window number
+setw -g window-status-current-format ' #{pane_current_command} '
+setw -g window-status-format ' #{pane_current_command} '
+
+# ----------------------------=== Plugins ===--------------------------
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'xamut/tmux-weather'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
