fix(alacritty): increase lineheight
Line height in Alacritty is no longer causing layout lines to become dashed

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -92,6 +92,10 @@ thm_blue="#a4b9ef"
 thm_orange="#f9c096"
 thm_black4="#575268"
 
+# pane colors
+set -g pane-active-border-style "bg=default, fg=${thm_pink}"
+set -g pane-border-style "fg=${thm_black}"
+
 # ----------------------------=== Status line ===--------------------------
 
 set -g status on
