refactor(vim): migrate from vimscript to lua

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,8 +1,11 @@
 {
   "coc.preferences.formatOnSaveFiletypes": [
-    "Markdown",
+    "mdx",
+    "markdown",
+    "markdown.mdx",
     "css",
     "html",
+    "lua",
     "javascript",
     "javascriptreact",
     "json",
