draw the rest of the owl

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -91,6 +91,7 @@ thm_yellow="#ebddaa"
 thm_blue="#a4b9ef"
 thm_orange="#f9c096"
 thm_black4="#575268"
+thm_lightgray="#5a6478"
 
 # pane colors
 set -g pane-active-border-style "bg=default, fg=${thm_pink}"
@@ -101,7 +102,7 @@ set -g pane-border-style "fg=${thm_black}"
 set -g status on
 set -g status-interval 5
 set -g status-bg "${thm_bg}"
-set -g status-fg "${thm_fg}"
+set -g status-fg "${thm_lightgray}"
 
 set -g status-left-length 90
 set -g status-right-length 90
