--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -11,6 +11,7 @@
     "markdown",
     "markdown.mdx",
     "mdx",
+    "mjml",
     "svelte",
     "typescript",
     "typescript.tsx",
@@ -27,9 +28,10 @@
   "snippets.userSnippetsDirectory": "~/Code/dotfiles/vim/snippets",
   "snippets.extends": {
     "javascriptreact": ["javascript"],
-    "typescriptreact": ["javascript"],
+    "mjml": ["html"],
+    "svelte": ["javascript", "svelte"],
     "typescript": ["javascript"],
-    "svelte": ["javascript", "svelte"]
+    "typescriptreact": ["javascript"]
   },
   "explorer.file.showHiddenFiles": true,
   "explorer.icon.enableNerdfont": true,
