refactor(vim): migrate from vimscript to lua (#16)
* refactor(vim): migrate from vimscript to lua

* fix: set homebrew path

* fix: native lua plugin for comment

* fix: breaking changes in nvim 0.7

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,12 +1,17 @@
 {
   "coc.preferences.formatOnSaveFiletypes": [
-    "Markdown",
+    "go",
     "css",
     "html",
     "javascript",
     "javascriptreact",
     "json",
     "jsonc",
+    "lua",
+    "markdown",
+    "markdown.mdx",
+    "mdx",
+    "mjml",
     "svelte",
     "typescript",
     "typescript.tsx",
@@ -23,9 +28,10 @@
   "snippets.userSnippetsDirectory": "~/Code/dotfiles/vim/snippets",
   "snippets.extends": {
     "javascriptreact": ["javascript"],
-    "typescriptreact": ["javascript"],
+    "mjml": ["html"],
+    "svelte": ["javascript", "svelte"],
     "typescript": ["javascript"],
-    "svelte": ["javascript", "svelte"]
+    "typescriptreact": ["javascript"]
   },
   "explorer.file.showHiddenFiles": true,
   "explorer.icon.enableNerdfont": true,
