fix: make luasnip work again

--- a/vim/snippets/package.json
+++ b/vim/snippets/package.json
@@ -1,13 +1,11 @@
 {
 	"name": "custom snippets",
 	"contributes": {
-		"snippets": [
-			{
-				"language": [
-					"javascript", "typescript", "svelte"
-				],
-				"path": "./javascript.json"
-			}
-		]
+		"snippets": [{
+			"language": [
+				"javascript", "typescript", "svelte"
+			],
+			"path": "./javascript.json"
+		}]
 	}
 }
