fix: add svelte snippets

--- a/vim/snippets/package.json
+++ b/vim/snippets/package.json
@@ -6,6 +6,12 @@
 				"javascript", "typescript", "svelte"
 			],
 			"path": "./javascript.json"
+		},
+    {
+			"language": [
+				"svelte"
+			],
+			"path": "./svelte.json"
 		}]
 	}
 }
