fix(tmux): display name of window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -134,8 +134,8 @@ set -g window-status-current-style "bg=${thm_red}, fg=${thm_bg}"
 set -g window-status-style "bg=${thm_bg}, fg=${thm_fg}"
 
 # remove indicators and window number
-setw -g window-status-current-format ' #{pane_current_command} '
-setw -g window-status-format ' #{pane_current_command} '
+setw -g window-status-current-format ' #{window_name} '
+setw -g window-status-format ' #{window_name} '
 
 # ----------------------------=== Plugins ===--------------------------
 
