fix(tmux): adjustments for catppuccin theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -75,6 +75,9 @@ set -g bell-action none
 # disable visual bell
 set -g visual-bell off
 
+# dont highlight active window
+setw -g monitor-activity off
+
 # ----------------------------=== Theme ===--------------------------
 
 # Catppuccin
@@ -110,7 +113,7 @@ set -g status-right-length 90
 set -g status-left ' #{tmux_mode_indicator} '
 set -g status-right '
     #{weather} #{battery_status_bg} | #{battery_percentage} #{battery_remain} |
-    #{cpu_fg_color} CPU:#{cpu_percentage} '
+    #{cpu_fg_color} CPU:#{cpu_percentage} #[default] | %H:%M %d-%b '
 
 # setup mode indicator styles
 set -g @mode_indicator_prefix_prompt ' ⚡️'
@@ -130,7 +133,7 @@ set -g @cpu_medium_fg_color "#[fg=${thm_yellow}]" # background color when cpu is
 set -g @cpu_high_fg_color "#[fk=${thm_red}]" # background color when cpu is high
 
 # set window list colors
-set -g window-status-current-style "bg=${thm_red}, fg=${thm_bg}"
+set -g window-status-current-style "bg=${thm_orange}, fg=${thm_bg}"
 set -g window-status-style "bg=${thm_bg}, fg=${thm_fg}"
 
 # remove indicators and window number
