--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,17 @@
+# start index from 1 instead of 0, for easier navigation
 set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g status-keys vi
+
+# make yanking more vim-like
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 set-option -g default-shell $SHELL
 
@@ -152,6 +160,8 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'xamut/tmux-weather'
+set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'catppuccin/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
