feat(tmux): use / to search among sessions

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,6 +20,8 @@ setw -g monitor-activity on
 
 unbind a
 bind-key a choose-tree -Zs -O name
+# bind / for searching inside choose-tree
+bind-key -Tcopy-mode-vi / send-keys -X search-forward
 
 bind-key c new-window -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
