feat(tmux): update sidebar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,7 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+set -g default-terminal "xterm-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g status-keys vi
@@ -109,8 +110,8 @@ thm_black4="#575268"
 thm_lightgray="#5a6478"
 
 # pane colors
-set -g pane-active-border-style "bg=default, fg=${thm_pink}"
-set -g pane-border-style "fg=${thm_black}"
+set -g pane-active-border-style "bg=default, fg=#{thm_pink}"
+set -g pane-border-style "fg=#{thm_black}"
 
 # ----------------------------=== Status line ===--------------------------
 
@@ -122,9 +123,11 @@ set -g status-left-length 90
 set -g status-right-length 90
 
 set -g status-left ' #{tmux_mode_indicator} '
-set -g status-right '
-    #{weather} #{battery_status_bg} | #{battery_percentage} #{battery_remain} |
-    #{cpu_fg_color} CPU:#{cpu_percentage} #[default] | %H:%M %d-%b '
+
+# set -g status-right '#[fg=#{thm_pink}]#S #[default] | #{weather} #{battery_status_bg} | #{battery_percentage} #{battery_remain} | #[fg={cpu_fg_color}]CPU:#{cpu_percentage} #[default] | %H:%M %d-%b '
+
+set -g status-right '#[fg=#{thm_pink}]#S #[default] | #{weather} #[bg=#{battery_status_bg}]#{battery_percentage} #{battery_remain}#[default] | #{cpu_fg_color} CPU: #{cpu_percentage} #[default] | #[fg=#{thm_blue}]%H:%M %d-%b'
+# set-option -ag status-right "| #[fg=${thm_red},bg=${thm_bg}]#(uptime | awk -F'( up | day|,)' '{print $2}')"
 
 # setup mode indicator styles
 set -g @mode_indicator_prefix_prompt ' ⚡️'
@@ -132,20 +135,20 @@ set -g @mode_indicator_copy_prompt ' ⚡️'
 set -g @mode_indicator_sync_prompt ' ⚡️'
 set -g @mode_indicator_empty_prompt ' ⚡️'
 
-set -g @mode_indicator_prefix_mode_style "bg=${thm_green}, fg=${thm_bg}"
-set -g @mode_indicator_copy_mode_style "bg=${thm_orange}, fg=${thm_bg}"
-set -g @mode_indicator_sync_mode_style "bg=${thm_pink}, fg=${thm_bg}"
-set -g @mode_indicator_empty_mode_style "bg=${thm_magenta}, fg=${thm_bg}"
+set -g @mode_indicator_prefix_mode_style "bg=#{thm_green}, fg=#{thm_bg}"
+# set -g @mode_indicator_copy_mode_style "bg=${thm_orange}, fg=${thm_bg}"
+set -g @mode_indicator_sync_mode_style "bg=#{thm_pink}, fg=#{thm_bg}"
+set -g @mode_indicator_empty_mode_style "bg=#{thm_magenta}, fg=#{thm_bg}"
 
 # setup cpu section
 set -g @cpu_percentage_format "%5.1f%%" # Add left padding
-set -g @cpu_low_fg_color "#[fg=${thm_green}]" # background color when cpu is low
-set -g @cpu_medium_fg_color "#[fg=${thm_yellow}]" # background color when cpu is medium
-set -g @cpu_high_fg_color "#[fk=${thm_red}]" # background color when cpu is high
+set -g @cpu_low_fg_color "#[fg=#{thm_green}]" # background color when cpu is low
+set -g @cpu_medium_fg_color "#[fg=#{thm_yellow}]" # background color when cpu is medium
+set -g @cpu_high_fg_color "#[fk=#{thm_red}]" # background color when cpu is high
 
 # set window list colors
-set -g window-status-current-style "bg=${thm_orange}, fg=${thm_bg}"
-set -g window-status-style "bg=${thm_bg}, fg=${thm_fg}"
+set -g window-status-current-style "bg=#{thm_orange}, fg=#{thm_bg}"
+set -g window-status-style "bg=#{thm_bg}, fg=#{thm_fg}"
 
 # remove indicators and window number
 setw -g window-status-current-format ' #{window_name} '
@@ -163,7 +166,7 @@ set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'xamut/tmux-weather'
 set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'catppuccin/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
