fix(kitty): ui adjustments

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,17 +4,19 @@ include current-theme.conf
 # END_KITTY_THEME
 #
 # fonts
-font_family      VictorMono Nerd Font Propo Medium
+font_family      VictorMono Nerd Font Propo Light
 bold_font        VictorMono Nerd Font Propo Bold
 italic_font      VictorMono Nerd Font Propo Italic
 bold_italic_font VictorMono Nerd Font Propo Bold Italic
 
 font_size 14
 
-modify_font cell_height 1.4
+modify_font cell_height 160%
 
 window_padding_width 10
+window_padding_height 0
 
+# try to tone down macos titlebar
 macos_show_window_title_in none
 macos_titlebar_color #1E1E2D
 macos_menubar_title_max_length 0
