--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,7 @@ set -g default-terminal "xterm-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g status-keys vi
+set-option -g default-command /opt/homebrew/bin/fish
 
 # make yanking more vim-like
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -130,10 +131,10 @@ set -g status-right '#[fg=#{thm_pink}]#S #[default] | #{weather} #[bg=#{battery_
 # set-option -ag status-right "| #[fg=${thm_red},bg=${thm_bg}]#(uptime | awk -F'( up | day|,)' '{print $2}')"
 
 # setup mode indicator styles
-set -g @mode_indicator_prefix_prompt ' ⚡️'
-set -g @mode_indicator_copy_prompt ' ⚡️'
-set -g @mode_indicator_sync_prompt ' ⚡️'
-set -g @mode_indicator_empty_prompt ' ⚡️'
+set -g @mode_indicator_prefix_prompt ' ⚡️ '
+set -g @mode_indicator_copy_prompt ' ⚡️ '
+set -g @mode_indicator_sync_prompt ' ⚡️ '
+set -g @mode_indicator_empty_prompt ' ⚡️ '
 
 set -g @mode_indicator_prefix_mode_style "bg=#{thm_green}, fg=#{thm_bg}"
 # set -g @mode_indicator_copy_mode_style "bg=${thm_orange}, fg=${thm_bg}"
