--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,3 +20,7 @@ window_padding_height 0
 macos_show_window_title_in none
 macos_titlebar_color #1E1E2D
 macos_menubar_title_max_length 0
+
+# key bindings
+map cmd+t discard_event
+map ctrl+tab discard_event
