style(vim): swap catppuccin with rose-pine

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,7 @@
 # BEGIN_KITTY_THEME
-# Catppuccin-Mocha
-include current-theme.conf
+# Rose-pine-Dawn
+include themes/rose-pine.conf
+
 # END_KITTY_THEME
 #
 # fonts
