--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -95,20 +95,20 @@ setw -g monitor-activity off
 # ----------------------------=== Theme ===--------------------------
 
 # Catppuccin
-thm_bg="#1e1e28"
-thm_fg="#dadae8"
-thm_cyan="#c2e7f0"
-thm_black="#15121c"
-thm_gray="#332e41"
+thm_bg="#191724"
+thm_fg="#e0def4"
+thm_cyan="#9ccfd8"
+thm_black="#21202e"
+thm_gray="#403d52"
 thm_magenta="#c6aae8"
 thm_pink="#e5b4e2"
-thm_red="#e38c8f"
+thm_red="#eb6492"
 thm_green="#b1e3ad"
-thm_yellow="#ebddaa"
-thm_blue="#a4b9ef"
-thm_orange="#f9c096"
+thm_yellow="#f6c177"
+thm_blue="#31748f"
+thm_orange="#f6c177"
 thm_black4="#575268"
-thm_lightgray="#5a6478"
+thm_lightgray="#524f67"
 
 # pane colors
 set -g pane-active-border-style "bg=default, fg=#{thm_pink}"
@@ -131,10 +131,10 @@ set -g status-right '#[fg=#{thm_pink}]#S #[default] | #{weather} #[bg=#{battery_
 # set-option -ag status-right "| #[fg=${thm_red},bg=${thm_bg}]#(uptime | awk -F'( up | day|,)' '{print $2}')"
 
 # setup mode indicator styles
-set -g @mode_indicator_prefix_prompt ' ⚡️ '
-set -g @mode_indicator_copy_prompt ' ⚡️ '
-set -g @mode_indicator_sync_prompt ' ⚡️ '
-set -g @mode_indicator_empty_prompt ' ⚡️ '
+set -g @mode_indicator_prefix_prompt '☠︎'
+set -g @mode_indicator_copy_prompt '☠︎'
+set -g @mode_indicator_sync_prompt '☠︎'
+set -g @mode_indicator_empty_prompt '☠︎'
 
 set -g @mode_indicator_prefix_mode_style "bg=#{thm_green}, fg=#{thm_bg}"
 # set -g @mode_indicator_copy_mode_style "bg=${thm_orange}, fg=${thm_bg}"
@@ -167,7 +167,7 @@ set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'xamut/tmux-weather'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'rose-pine/tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
