fix(tmux): styling for statusbar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -125,10 +125,7 @@ set -g status-right-length 90
 
 set -g status-left ' #{tmux_mode_indicator} '
 
-# set -g status-right '#[fg=#{thm_pink}]#S #[default] | #{weather} #{battery_status_bg} | #{battery_percentage} #{battery_remain} | #[fg={cpu_fg_color}]CPU:#{cpu_percentage} #[default] | %H:%M %d-%b '
-
-set -g status-right '#[fg=#{thm_pink}]#S #[default] | #{weather} #[bg=#{battery_status_bg}]#{battery_percentage} #{battery_remain}#[default] | #{cpu_fg_color} CPU: #{cpu_percentage} #[default] | #[fg=#{thm_blue}]%H:%M %d-%b'
-# set-option -ag status-right "| #[fg=${thm_red},bg=${thm_bg}]#(uptime | awk -F'( up | day|,)' '{print $2}')"
+set -g status-right '#[fg=#{thm_pink}]#S #[default] | #{weather} | #[bg=#{battery_status_bg}]#{battery_percentage} #{battery_remain}#[default] | #{cpu_fg_color} CPU: #{cpu_percentage} #[default] | #[fg=#{thm_magenta}]%d/%m #[fg=#{thm_blue}]%H:%M'
 
 # setup mode indicator styles
 set -g @mode_indicator_prefix_prompt ' ☠︎ '
