fix(tmux): statusbar better aligned with ghostty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -117,7 +117,7 @@ set -g pane-border-style "fg=#{thm_black}"
 # ----------------------------=== Status line ===--------------------------
 
 set -g status on
-set -g status-bg "${thm_bg}"
+set -g status-bg "${thm_black}"
 set -g status-fg "${thm_lightgray}"
 
 set -g status-left-length 90
@@ -145,8 +145,8 @@ set -g @cpu_medium_fg_color "#[fg=#{thm_yellow}]" # background color when cpu is
 set -g @cpu_high_fg_color "#[fk=#{thm_red}]" # background color when cpu is high
 
 # set window list colors
-set -g window-status-current-style "bg=#{thm_orange}, fg=#{thm_bg}"
-set -g window-status-style "bg=#{thm_bg}, fg=#{thm_fg}"
+set -g window-status-current-style "bg=#{thm_black}, fg=#{thm_orange}"
+set -g window-status-style "bg=#{thm_black}, fg=#{thm_fg}"
 
 # remove indicators and window number
 setw -g window-status-current-format ' #{window_name} '
