--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,9 @@ bind-key a choose-tree -Zs -O name
 # bind / for searching inside choose-tree
 bind-key -Tcopy-mode-vi / send-keys -X search-forward
 
+unbind space
+bind-key space switch-client -l
+
 bind-key c new-window -c "#{pane_current_path}"
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -v -c "#{pane_current_path}"
