--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -1,7 +1,7 @@
-[manager]
+[mgr]
 show_hidden = true
 show_symlink = true
 
-[[manager.prepend_keymap]]
+[[mgr.prepend_keymap]]
 on = "<C-y>"
 run = ["plugin system-clipboard"]
