fix(tmux): use rose-pine theme for plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -97,21 +97,21 @@ setw -g monitor-activity off
 
 # ----------------------------=== Theme ===--------------------------
 
-# Catppuccin
-thm_bg="#191724"
-thm_fg="#e0def4"
-thm_cyan="#9ccfd8"
-thm_black="#21202e"
-thm_gray="#403d52"
-thm_magenta="#c6aae8"
-thm_pink="#e5b4e2"
-thm_red="#eb6492"
-thm_green="#b1e3ad"
-thm_yellow="#f6c177"
-thm_blue="#31748f"
-thm_orange="#f6c177"
-thm_black4="#575268"
-thm_lightgray="#524f67"
+# Rose Pine
+thm_bg="#191724"      # base
+thm_fg="#e0def4"      # text
+thm_cyan="#9ccfd8"    # foam
+thm_black="#21202e"   # surface
+thm_gray="#403d52"    # overlay
+thm_magenta="#c6aae8" # iris
+thm_pink="#e5b4e2"    # love
+thm_red="#eb6492"     # love
+thm_green="#b1e3ad"   # pine (custom light)
+thm_yellow="#f6c177"  # gold
+thm_blue="#31748f"    # pine
+thm_orange="#f6c177"  # gold
+thm_black4="#575268"  # muted
+thm_lightgray="#524f67" # highlight med
 
 # pane colors
 set -g pane-active-border-style "bg=default, fg=#{thm_pink}"
